// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CoinRow /> should render <Price /> in the correct style when moon 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 180px;
  max-width: 100%;
  overflow: hidden;
  white-space: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: right;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  font-family: 'menlo','monaco','courier',monospace;
  width: 110px;
  color: #4ABDAC;
}

<div
  className="c0"
/>
`;

exports[`<CoinRow /> should render <Price /> in the correct style when no moon 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 180px;
  max-width: 100%;
  overflow: hidden;
  white-space: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: right;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  font-family: 'menlo','monaco','courier',monospace;
  width: 110px;
  color: #CD5360;
}

<div
  className="c0"
/>
`;

exports[`<CoinRow /> should render a coin row negative 1`] = `
<styled.li
  onClick={null}
>
  <styled.div>
    2
  </styled.div>
  <styled.div
    width={30}
  >
    <img
      alt="Ethereum"
      src="https://files.coinmarketcap.com/static/img/coins/32x32/ethereum.png"
    />
  </styled.div>
  <styled.div
    moon={true}
  >
    <NumberFormat
      allowNegative={true}
      decimalSeparator="."
      displayType="text"
      isAllowed={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      onMouseUp={[Function]}
      prefix="$"
      suffix=""
      thousandSeparator={true}
      type="text"
      value={333.882}
    />
  </styled.div>
  <styled.div>
    <NumberFormat
      allowNegative={true}
      decimalSeparator="."
      displayType="text"
      isAllowed={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      onMouseUp={[Function]}
      prefix="$"
      suffix=""
      thousandSeparator={true}
      type="text"
      value={31472781162}
    />
  </styled.div>
  <styled.div>
    <NumberFormat
      allowNegative={true}
      decimalSeparator="."
      displayType="text"
      isAllowed={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      onMouseUp={[Function]}
      prefix="$"
      suffix=""
      thousandSeparator={true}
      type="text"
      value={514181000}
    />
  </styled.div>
</styled.li>
`;

exports[`<CoinRow /> should render a coin row positive 1`] = `
<styled.li
  onClick={null}
>
  <styled.div>
    1
  </styled.div>
  <styled.div
    width={30}
  >
    <img
      alt="Bitcoin"
      src="https://files.coinmarketcap.com/static/img/coins/32x32/bitcoin.png"
    />
  </styled.div>
  <styled.div
    moon={false}
  >
    <NumberFormat
      allowNegative={true}
      decimalSeparator="."
      displayType="text"
      isAllowed={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      onMouseUp={[Function]}
      prefix="$"
      suffix=""
      thousandSeparator={true}
      type="text"
      value={4352.4}
    />
  </styled.div>
  <styled.div>
    <NumberFormat
      allowNegative={true}
      decimalSeparator="."
      displayType="text"
      isAllowed={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      onMouseUp={[Function]}
      prefix="$"
      suffix=""
      thousandSeparator={true}
      type="text"
      value={71929882019}
    />
  </styled.div>
  <styled.div>
    <NumberFormat
      allowNegative={true}
      decimalSeparator="."
      displayType="text"
      isAllowed={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      onMouseUp={[Function]}
      prefix="$"
      suffix=""
      thousandSeparator={true}
      type="text"
      value={1511610000}
    />
  </styled.div>
</styled.li>
`;
